force-app/main/default/objects/Liability__c/fields/Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline__c</fullName>
    <description>Set via workflow rule when liability is created based on the Appeal Deadline (Days) from the assessment</description>
    <inlineHelpText>The default appeal deadline based on the Appeal Deadline (Days) from the parent assessment</inlineHelpText>
    <label>Appeal Deadline</label>
    <type>Date</type>
</CustomField>