force-app/main/default/objects/Liability__c/fields/Appeals_on_Liability__c.field-meta.xml
<CustomField>
    <fullName>Appeals_on_Liability__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Appeals on this Liability, controlled by a workflow</description>
    <label>Appeals on Liability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>