force-app/main/default/objects/Liability__c/fields/Assessment_ID_Conga__c.field-meta.xml
<CustomField>
    <fullName>Assessment_ID_Conga__c</fullName>
    <formula>Assessment__r.Id</formula>
    <label>Assessment ID - Conga DO NOT DELETE</label>
    <type>Text</type>
</CustomField>