force-app/main/default/objects/Liability__c/fields/Assigned_Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Email__c</fullName>
    <description>For WF rule &quot;Follow Up After 30 Appeal Deadline&quot; to send email alert to Assigned Deputy.</description>
    <label>Assigned Deputy Email</label>
    <type>Email</type>
</CustomField>