force-app/main/default/objects/Liability__c/fields/Assigned_Deputy_Title__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Deputy_Title__c</fullName>
    <formula>Case_Management__r.Assigned_Deputy_Title__c</formula>
    <label>Assigned Deputy Title</label>
    <type>Text</type>
</CustomField>