force-app/main/default/objects/Liability__c/fields/BOFE8A__c.field-meta.xml
<CustomField>
    <fullName>BOFE8A__c</fullName>
    <formula>CASE( Citation_Form_Assessment_Conga__c, 
&#39;BOFE 240A&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 240B&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 335&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 336&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 812&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 814&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 815&#39;, &#39;,Violation - BOFE 008A&#39;, 
&#39;BOFE 816&#39;, &#39;,Violation - BOFE 008A&#39;, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOFE8A</label>
    <type>Text</type>
</CustomField>