force-app/main/default/objects/Liability__c/fields/Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Case_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related case to the liability</description>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Liability</relationshipLabel>
    <relationshipName>Liability</relationshipName>
    <type>Lookup</type>
</CustomField>