force-app/main/default/objects/Liability__c/fields/Citation_Form_Assessment_Conga__c.field-meta.xml
<CustomField>
    <fullName>Citation_Form_Assessment_Conga__c</fullName>
    <description>Displays the citation form that should be selected when printing the citation</description>
    <formula>Assessment__r.Citation_Form__c</formula>
    <inlineHelpText>Select this citation form when printing.</inlineHelpText>
    <label>Citation Form</label>
    <type>Text</type>
</CustomField>