force-app/main/default/objects/Liability__c/fields/Corrective_Action_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Deadline__c</fullName>
    <description>Used for BOFE 84 citation</description>
    <inlineHelpText>Deadline for corrected action to be taken and notification to the office.</inlineHelpText>
    <label>Corrective Action Deadline</label>
    <type>Date</type>
</CustomField>