force-app/main/default/objects/Liability__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date that the decision was completed for this liability</description>
    <inlineHelpText>Date that the decision was completed for this liability</inlineHelpText>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>