force-app/main/default/objects/Liability__c/fields/Deputy_Phone__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Phone__c</fullName>
    <formula>Case_Management__r.Assigned_Deputy__r.Phone__c</formula>
    <label>Deputy Phone</label>
    <type>Text</type>
</CustomField>