force-app/main/default/objects/Liability__c/fields/Garment_Fund_Referral__c.field-meta.xml
<CustomField>
    <fullName>Garment_Fund_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a liability has been referred to the garment fund to have the claimant paid from the fund directly.</description>
    <inlineHelpText>If this liability has been referred to the garment fund for payment to the claimant, check this box and enter the date of the referral</inlineHelpText>
    <label>Garment Fund Referral</label>
    <type>Checkbox</type>
</CustomField>