force-app/main/default/objects/Liability__c/fields/Garment_Industry_Cert_of_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Garment_Industry_Cert_of_Reg_Number__c</fullName>
    <label>Garment Industry Cert. of Reg. Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>