force-app/main/default/objects/Liability__c/fields/HIDDEN_Field_For_Liability_Search__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Field_For_Liability_Search__c</fullName>
    <formula>IF (Case_Management__r.Assigned_Deputy__r.User__r.Id = $User.Id , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HIDDEN Field For Liability Search</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>