force-app/main/default/objects/Liability__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <label>Imported From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FM-TIPP</fullName>
            </value>
            <value>
                <fullName>Import 2</fullName>
            </value>
            <value>
                <fullName>BOFE AR IMPORT 2</fullName>
            </value>
            <value>
                <fullName>LBO_AR</fullName>
            </value>
            <value>
                <fullName>VNO-WCA</fullName>
            </value>
            <value>
                <fullName>BOFE AR</fullName>
            </value>
            <value>
                <fullName>BOFE -AR</fullName>
            </value>
            <value>
                <fullName>SBA-WCA</fullName>
            </value>
            <value>
                <fullName>32-117</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>BOFE-AR</fullName>
            </value>
            <value>
                <fullName>STK-WCA</fullName>
            </value>
            <value>
                <fullName>BOFE FM Import 2</fullName>
            </value>
            <value>
                <fullName>RDG-WCA</fullName>
            </value>
            <value>
                <fullName>FRE-WCA</fullName>
            </value>
            <value>
                <fullName>BAK-WCA</fullName>
            </value>
            <value>
                <fullName>SAC-WCA</fullName>
            </value>
            <value>
                <fullName>SRO-WCA</fullName>
            </value>
            <value>
                <fullName>SBR-WCA</fullName>
            </value>
            <value>
                <fullName>SFO-WCA</fullName>
            </value>
            <value>
                <fullName>LAO-WCA</fullName>
            </value>
            <value>
                <fullName>SDO-WCA</fullName>
            </value>
            <value>
                <fullName>SJO-WCA</fullName>
            </value>
            <value>
                <fullName>OAK-WCA</fullName>
            </value>
            <value>
                <fullName>ANA-WCA</fullName>
            </value>
            <value>
                <fullName>LBO-WCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>