force-app/main/default/objects/Liability__c/fields/Individual_Liability_bool__c.field-meta.xml
<CustomField>
    <fullName>Individual_Liability_bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Liability</label>
    <type>Checkbox</type>
</CustomField>