force-app/main/default/objects/Liability__c/fields/Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Balance_Due__c</fullName>
    <formula>Total_Interest_Assessed__c - Total_Interest_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Interest still owed on this liability</inlineHelpText>
    <label>Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>