force-app/main/default/objects/Liability__c/fields/Joint_Liability__c.field-meta.xml
<CustomField>
    <fullName>Joint_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that joint liability has been determined as bases for liability for parties on this liability. Value is set by flow (Insert flow name) and triggers specific text to be displayed on output docs where appropriate.</description>
    <label>Joint Liability</label>
    <type>Checkbox</type>
</CustomField>