force-app/main/default/objects/Liability__c/fields/Joint_Liability_bool__c.field-meta.xml
<CustomField>
    <fullName>Joint_Liability_bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Liability</label>
    <type>Checkbox</type>
</CustomField>