force-app/main/default/objects/Liability__c/fields/Liable_Party_Count__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Count__c</fullName>
    <label>Liable Party Count</label>
    <summaryForeignKey>Liable_Party__c.Liability__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>