force-app/main/default/objects/Liability__c/fields/Location_of_Violations__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Violations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for output documents along with formula field for the address value</description>
    <inlineHelpText>Select the location where the violations occurred. This must be a location in the system already. If you cannot locat the location, you must add it to the account first.</inlineHelpText>
    <label>Location of Violations</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Liability</relationshipLabel>
    <relationshipName>Liability</relationshipName>
    <type>Lookup</type>
</CustomField>