force-app/main/default/objects/Liability__c/fields/Location_Street__c.field-meta.xml
<CustomField>
    <fullName>Location_Street__c</fullName>
    <formula>Assessment__r.Location_Street__c</formula>
    <label>Location - Street</label>
    <type>Text</type>
</CustomField>