force-app/main/default/objects/Liability__c/fields/Manual_Citation_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Citation_Date__c</fullName>
    <description>If a citation is written from a citation book and later data entered into the system, then this is the date that the manual citation was issued.</description>
    <inlineHelpText>If a citation is written from a citation book and later data entered into the system, then this is the date that the manual citation was issued.</inlineHelpText>
    <label>Manual Citation Date</label>
    <type>Date</type>
</CustomField>