force-app/main/default/objects/Liability__c/fields/Manual_Citation_Number__c.field-meta.xml
<CustomField>
    <fullName>Manual_Citation_Number__c</fullName>
    <description>Use this to specify a Manual Citation Number due to a paper citation being entered.  This value is searchable.</description>
    <externalId>true</externalId>
    <inlineHelpText>Use this to specify a Manual Citation Number due to a paper citation being entered.  This value is searchable.</inlineHelpText>
    <label>Manual Citation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>