force-app/main/default/objects/Liability__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Certain citations require identifying the manufacturer, this provides a lookup to the manufacturer account</description>
    <inlineHelpText>Select the manufacturer if necessary for citations that are created from this liability.</inlineHelpText>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liability (Manufacturer)</relationshipLabel>
    <relationshipName>Liability_Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>