force-app/main/default/objects/Liability__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a Meeting record to a Liability record in order to migrate the Hearing Officer/Courthouse information from the Meeting into output documents via Conga.</description>
    <label>Meeting</label>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipLabel>Liability</relationshipLabel>
    <relationshipName>Liability</relationshipName>
    <type>Lookup</type>
</CustomField>