force-app/main/default/objects/Liability__c/fields/Modification_Type__c.field-meta.xml
<CustomField>
    <fullName>Modification_Type__c</fullName>
    <label>Modification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hearing Modification</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
            <value>
                <fullName>Legal Settlement</fullName>
            </value>
            <value>
                <fullName>Offer in Compromise</fullName>
            </value>
            <value>
                <fullName>Tolling Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>