force-app/main/default/objects/Liability__c/fields/Office_Address_Conga__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Conga__c</fullName>
    <formula>Case_Management__r.Office__r.Address_1__c+&quot;,&quot;+&quot; &quot;+ Case_Management__r.Office__r.Address_2__c+&quot;,&quot;+&quot; &quot;+ Case_Management__r.Office__r.City__c+&quot;,&quot;+&quot; &quot;+ Case_Management__r.Office__r.State__c+&quot; &quot;+ Case_Management__r.Office__r.Zip_Code__c</formula>
    <label>Office Address - Conga</label>
    <type>Text</type>
</CustomField>