force-app/main/default/objects/Liability__c/fields/OfficeID__c.field-meta.xml
<CustomField>
    <fullName>OfficeID__c</fullName>
    <description>Pulls the Office ID down for use in output documents that include office info.</description>
    <formula>Case_Management__r.Office__c</formula>
    <label>OfficeID</label>
    <type>Text</type>
</CustomField>