force-app/main/default/objects/Liability__c/fields/Open_Appeals__c.field-meta.xml
<CustomField>
    <fullName>Open_Appeals__c</fullName>
    <description>Counts the open appeals so that they can be used in rules.</description>
    <label>Open Appeals</label>
    <summaryFilterItems>
        <field>Liability_Appeal__c.Appeal_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed, Withdrawn, Received - Untimely</value>
    </summaryFilterItems>
    <summaryForeignKey>Liability_Appeal__c.Liability__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>