force-app/main/default/objects/Liability__c/fields/Party_Served_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Served_Name__c</fullName>
    <inlineHelpText>Name of the person served the citation</inlineHelpText>
    <label>Party Served - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>