force-app/main/default/objects/Liability__c/fields/Party_Served_Title__c.field-meta.xml
<CustomField>
    <fullName>Party_Served_Title__c</fullName>
    <inlineHelpText>Title of the person being served the citation</inlineHelpText>
    <label>Party Served - Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>