force-app/main/default/objects/Liability__c/fields/Penalties_Assessment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalties_Assessment_Amount__c</fullName>
    <description>Penalty amount after it has been modified by a hearing, etc.</description>
    <inlineHelpText>Modified penalty amount for the liability.
Previous label: Modified To Penalties Assessment Amount</inlineHelpText>
    <label>Modified To Penalties Assessment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>