force-app/main/default/objects/Liability__c/fields/Penalties_Assessment_Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Penalties_Assessment_Original_Amount__c</fullName>
    <label>Penalties Assessment Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>