force-app/main/default/objects/Liability__c/fields/Refer_to_JEU__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_JEU__c</fullName>
    <description>Use this to set the status of the JEU Referral.  Other information may be required based on the selection.</description>
    <inlineHelpText>The status of the JEU referral. The actual referral to JEU should be submitted using the &quot;Refer to JEU&quot; button at the top of the page.</inlineHelpText>
    <label>Refer to JEU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Rejected-Sr</fullName>
            </value>
            <value>
                <fullName>Rejected-JEU</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending-JEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>