force-app/main/default/objects/Liability__c/fields/Residence_Address__c.field-meta.xml
<CustomField>
    <fullName>Residence_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the residence from locations already in the system. If the address does not exist, you need to create it associated to the employer first. Displayed on certain citation documents.</inlineHelpText>
    <label>Residence Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Liability (Residence Address)</relationshipLabel>
    <relationshipName>Liability_Residence</relationshipName>
    <type>Lookup</type>
</CustomField>