force-app/main/default/objects/Liability__c/fields/Senior_Email__c.field-meta.xml
<CustomField>
    <fullName>Senior_Email__c</fullName>
    <description>Holds the senior&#39;s email address for use in email notification</description>
    <label>Senior Email</label>
    <type>Email</type>
</CustomField>